Improve CallHomeMountSshAuthProvider dispatch
Modernize DataObjectModification dispatch by using a switch expression
over its sealed hierarchy, eliminating superfluous default cases and
improving ergonomics.

JIRA: NETCONF-1530
Change-Id: If5c4fd2c143914f860ff77838c8756f5f8ec504e
Signed-off-by: Matej Sramcik <matej.sramcik@pantheon.tech>